fixed padding on filter button, added style to search bar and spacing in activities section with percentages and px

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header a:hover{
   font-size: 18px;
   font-weight: bold;
   justify-content: center;
-  line-height: 40px;
+  line-height: 50px;
   min-height: 40px;
   min-width: 0px;
   padding: 0px;
@@ -97,7 +97,7 @@ header a:hover{
     padding: 15px;
     text-align: center;
     text-decoration: none;
-    
+
     margin: 4px 2px;
     border-radius: 50%;
     position: absolute;
